test/libsolidity/syntaxTests/nameAndTypeResolution/542_warn_about_address_members_on_contract_transfer.sol
contract C {
    function f() view public {
        this.transfer;
    }
}
// ----
// TypeError: (52-65): Member "transfer" not found or not visible after argument-dependent lookup in contract C
